# python-MortgageRateScraper

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/: healthcheck.py  main.py
src/notifications/: send_notification.py
src/scraper/: rates.py  rates.py.bak  rates.py.orig
tests/: test_rates.py
