[tool.poetry]
name = "python-mortgageratescraper"
version = "0.1.0"
description = ""
authors = ["Tim Bryant <timothybryant3@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
apprise = "^1.8.1"
schedule = "^1.2.2"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
sourcery = "^1.22.0"
autopep8 = "^2.3.1"
black = "^24.8.0"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
